[metadata]
name = bumblebee-stormbee
author = ARDC
author_email = coreservices@ardc.edu.au
summary = Test tool for ARDC Virtual Desktop service
description_file = README.md
home_page = https://github.com/NeCTAR-RC/bumblebee-stormbee
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    openstack
    desktop
    launcher
    bumblebee

[options.entry_points]
console_scripts =
    stormbee = stormbee.main:main
