[metadata]
name = bumblebee-stormbee
author = ARDC
author_email = coreservices@ardc.edu.au
summary = Test tool for ARDC Virtual Desktop service
description_file = README.md
home_page = https://github.com/NeCTAR-RC/bumblebee-stormbee
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords =
    openstack
    desktop
    launcher
    bumblebee

[files]
packages = stormbee

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
console_scripts =
    stormbee = stormbee.main:main
